objects/FieloEE__RewardTag__c.object
<CustomObject>
    <description>Set of tags of a reward.</description>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <label>Reward</label>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Rewards Tags</relationshipLabel>
        <relationshipName>RewardTag</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Rewards Tags</relationshipLabel>
        <relationshipName>RewardTag</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reward Tag</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Prize_PrizeTag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reward Tag</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>